--- a/frontend/styles/variables.scss
+++ b/frontend/styles/variables.scss
@@ -10,3 +10,4 @@ $z-index-header: 10;
 $z-index-sample-list: 0;
 $z-index-blocked-overlay: 20;
 $z-index-context-menu: 100;
+$z-index-modal: 50;
